[gd_scene load_steps=17 format=2]

[ext_resource path="res://fonts/Rowdies-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://img/Focado.png" type="Texture" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Levels.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/sound_2.mp3" type="AudioStream" id=5]
[ext_resource path="res://img/interface/botão home/home completo.png" type="Texture" id=6]
[ext_resource path="res://img/interface/botão créditos/créditos completo.png" type="Texture" id=7]
[ext_resource path="res://img/interface/botão jogar/jogar completo.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 69
outline_size = 3
outline_color = Color( 0.301961, 0.243137, 0.0392157, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_space = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 46
outline_size = 3
outline_color = Color( 0.0784314, 0.0156863, 0.0156863, 1 )
use_filter = true
extra_spacing_bottom = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )
levelScene = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 880.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = 146.0
margin_right = 1282.0
margin_bottom = 341.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.501961, 0.356863, 0.113725, 1 )
custom_colors/font_outline_modulate = Color( 0.603922, 0.447059, 0.188235, 1 )
custom_fonts/font = SubResource( 1 )
text = "VAMOS CONHECER O JARDIM?"
align = 1
valign = 1
clip_text = true
uppercase = true

[node name="Jogar" type="Button" parent="."]
margin_left = 532.0
margin_top = 384.0
margin_right = 954.0
margin_bottom = 614.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 8 )

[node name="Criadores" type="Button" parent="."]
margin_left = 534.0
margin_top = 531.0
margin_right = 956.0
margin_bottom = 761.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 7 )

[node name="Sair" type="Button" parent="."]
margin_left = 544.0
margin_top = 680.0
margin_right = 909.0
margin_bottom = 910.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 2 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -11.826
autoplay = true
attenuation = 0.125

[connection signal="button_up" from="Jogar" to="." method="_on_Jogar_button_up"]
[connection signal="button_up" from="Criadores" to="." method="_on_Criadores_button_up"]
[connection signal="button_up" from="Sair" to="." method="_on_Sair_button_up"]
